--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -22,6 +22,7 @@ jobs:
         git checkout gh-pages
         git pull
         git merge --no-ff master -m "Auto merge master to gh-pages branch"
+        git push
         npm install
         npm build --output-path docs --base-href /DLBIPMI01-Frontend/
         mv /docs/browser/* /docs/
