--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -29,6 +29,6 @@ jobs:
         npm install
         npm run build
         ls
-        mv ./home/runner/work/DLBIPMI01-Frontend/docs/browser/* home/runner/work/DLBIPMI01-Frontend/docs/
-        cp ./home/runner/work/DLBIPMI01-Frontend/docs/index.html home/runner/work/DLBIPMI01-Frontend/docs/404.html
+        mv ./docs/browser/* ./docs
+        cp ./docs/index.html ./docs/404.html
         
